add thumbnail image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/swirl2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mmautomates</title>
+    <title>MM Automates - Accounting Automation That Ships and Sticks</title>
+    
+    <!-- Open Graph meta tags for social sharing -->
+    <meta property="og:title" content="MM Automates - Accounting Automation That Ships and Sticks" />
+    <meta property="og:description" content="I help finance teams turn manual routines into low-code workflows with clear controls, clean outputs, and audit-ready documentation." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mmautomates.com" />
+    <meta property="og:site_name" content="MM Automates" />
+    <meta property="og:image" content="https://mmautomates.com/Thumbnail.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="MM Automates - Accounting Automation That Ships and Sticks" />
+    <meta name="twitter:description" content="I help finance teams turn manual routines into low-code workflows with clear controls, clean outputs, and audit-ready documentation." />
+    <meta name="twitter:image" content="https://mmautomates.com/Thumbnail.jpg" />
   </head>
   <body>
     <div id="root"></div>
